--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Hello Github</h1>
     <p>It is my first github repository practice.</p>
+    <p> Hello i am another developer</p>
 </body>
 </html>
