--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Hello Github</h1>
     <p>It is my first github repository practice.</p>
     <p> Hello i am another developer</p>
+    <p> welcome to our development team</p>
 </body>
 </html>
