--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h1><span class="name-hilight">Feroz</span> Website</h1>
             <h3>World class professional web developer</h3>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type</p>
-           
+            <a class="link-button" target="_blank" href="https://vlmbd.com/">Hire Me</a>
         </div>
         <div class="half-width"><img src="images/jhankar.png"></div>
     </section>
