--- a/index.html
+++ b/index.html
@@ -21,5 +21,32 @@
         </div>
         <div class="half-width"><img src="images/jhankar.png"></div>
     </section>
+    <section class="dream-section">
+        <div class="half-width">
+                <img src="images/jhankar2.png">
+        </div>
+        <div class="half-width">
+            <h2>Dream Boy</h2>
+            <h3>Become a No 1 Developer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi consectetur, dolorum ad dicta provident, suscipit, exercitationem alias illo unde doloremque eius itaque labore? Laudantium corporis iusto dolor ad fugiat repellendus repellat commodi possimus quia voluptatibus aliquid rerum quibusdam aliquam placeat accusamus voluptas perspiciatis alias assumenda ratione aperiam, minima culpa? Aperiam.</p>
+            <a href="www.bugmobiles.com" target="_blank" class="link-button">Download my Portfolio</a>
+        </div>
+    </section>
+    <section class="experience-area">
+        <h2>experiences:</h2>
+        <div id="full-stack" class="half-width single-experience">
+            <h3>Full stack web developer</h3>
+            <h4 class="name-hilight">2018-Till Now | professional</h4>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae, totam ex incidunt in libero reprehenderit praesentium temporibus quae velit quibusdam?</p>
+        </div>
+        <div id="baby-web" class="half-width single-experience">
+            <h3>Baby web developer</h3>
+            <h4 class="name-hilight">2015-2018 | professional</h4>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae, totam ex incidunt in libero reprehenderit praesentium temporibus quae velit quibusdam?</p>
+        </div>
+    </section>
+    <footer>
+        <p>All right reserve @ feroz Ahmed | 2022</p>
+    </footer>
 </body>
 </html>
